--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -22,7 +22,7 @@
             align-items: center;
             text-align: center;
             &-name {
-                @include text($font-family: Fraunces, $font-size: 73px, $font-weight: 600, $line-height: 100px);
+                @include text($font-family: Montserrat, $font-size: 73px, $font-weight: 600, $line-height: 100px);
                 margin-bottom: 16px;
                 width: 70%;
                 img {
@@ -167,13 +167,13 @@
     }
 }
 
-@media screen and (max-width: 559px) {
+@media screen and (max-width: 560px) {
     .banner {
         margin-top: 2em;
         &__top {
-            padding: 20px 0;
+            padding: 30px 0;
             &-info {
-                &-name { font-size: 36px; line-height: 24px; }
+                &-name { font-size: 35px; line-height: 24px; }
                 &-text { line-height: 20px; }
             }
         }
@@ -201,36 +201,58 @@
     .banner {
         margin-top: 1em;
         &__top {
+            padding: 10px 0 0 0;
             &-info {
                 &-name { font-size: 30px; }
                 &-text { font-size: 16px; }
-            }
-            &-scroll_down {
-                width: 70px;
-                .arrowdown {
-                    width: 12px;
-                    top: 16px;
-                    left: 29px;
+                &-scroll_down {
+                    width: 70px;
+                    .arrowdown {
+                        width: 12px;
+                        top: 16px;
+                        left: 29px;
+                    }
                 }
             }
-
         }
         &__bottom {
-            margin-top: 60px;
+            margin-top: 40px;
             .container-xl {
                 padding: 0 10px;
             }
         }
         &__btn {
-            margin-bottom: 30px;
+            margin-bottom: 20px;
         }
     }
 }
 
-@media screen and (max-width: 374px) {
+@media screen and (max-width: 425px) {
     .banner {
         &__top {
-            background-size: 120%;
+            &-info {
+                &-name { font-size: 24px; }
+                &-text { font-size: 13px; }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .banner {
+        &__top {
+            &-info {
+                &-name { font-size: 19px; margin-bottom: 5px; }
+                &-text { font-size: 12px; margin-bottom: 10px; }
+                &-scroll_down {
+                    width: 60px;
+                    .arrowdown {
+                        width: 10px;
+                        top: 14px;
+                        left: 25px;
+                    }
+                }
+            }
         }
     }
 }
