--- a/src/styles/design.scss
+++ b/src/styles/design.scss
@@ -1,4 +1,4 @@
-@mixin text($font-family: Fraunces, $font-size: 20px, $font-weight: 600, $line-height: 110%, $color: #fff) {
+@mixin text($font-family: Montserrat, $font-size: 20px, $font-weight: 600, $line-height: 110%, $color: #fff) {
     font-family: $font-family;
     font-size: $font-size;
     font-weight: $font-weight;
