--- a/src/styles/eduwork.scss
+++ b/src/styles/eduwork.scss
@@ -1,4 +1,4 @@
-@mixin text($font-family: Fraunces, $font-size: 20px, $font-weight: 600, $line-height: 128.5%, $color: var(--textblue)) {
+@mixin text($font-family: Montserrat, $font-size: 20px, $font-weight: 600, $line-height: 128.5%, $color: var(--textblue)) {
     font-family: $font-family;
     font-size: $font-size;
     font-weight: $font-weight;
@@ -138,7 +138,7 @@
 
 @media screen and (max-width: 559px) {
     .eduwork {
-        margin-top: 60px;
+        margin-top: 45px;
         &__experience-list-info-period {
             width: 100px;
             font-size: 15px;
