--- a/src/styles/researchInsights.scss
+++ b/src/styles/researchInsights.scss
@@ -1,4 +1,4 @@
-@mixin text($font-family: Fraunces, $font-size: 25px, $font-weight: 600, $line-height: 110%, $color: var(--textblue)) {
+@mixin text($font-family: Montserrat, $font-size: 25px, $font-weight: 600, $line-height: 110%, $color: var(--textblue)) {
     font-family: $font-family;
     font-size: $font-size;
     font-weight: $font-weight;
